--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,30 +1,29 @@
-name: Update README with latest blog posts
+#name: Update README with latest blog posts
 
-on:
-  workflow_dispatch: # Allows manual triggering
-  schedule:
-    - cron: '0 0 * * MON' # Runs at 00:00 UTC every Monday
+#on:
+#  workflow_dispatch: # Allows manual triggering
+#  schedule:
+#    - cron: '0 0 * * MON' # Runs at 00:00 UTC every Monday
     
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
 
-jobs:
-  update-readme:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+#jobs:
+#  update-readme:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout Repository
+  #      uses: actions/checkout@v2
 
-      - name: Fetch latest blog posts
-        uses: gautamkrishnar/blog-post-workflow@v1.1
-        with:
-          feed_list: "https://sjohnonline.blogspot.com/feeds/posts/default"
+ #     - name: Fetch latest blog posts
+ #       uses: gautamkrishnar/blog-post-workflow@v1.1
+  #      with:
+   #       feed_list: "https://sjohnonline.blogspot.com/feeds/posts/default"
 
-      - name: Commit changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add README.md
-          git commit -m "Updated latest blog posts"
-          git push
+     # - name: Commit changes
+#          git config --global user.name 'github-actions[bot]'
+        #  git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+      #    git add README.md
+      #    git commit -m "Updated latest blog posts"
+      #    git push
